@@ -1,4 +1,8 @@
 2013-02-04: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/DNS.pm: set default udppacketsize to 2048, which seems
+   to be the suggested value to use in the Net::DNS documentation.
+
+2013-02-04: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Verifier.pm: avoid an 'uninitialized value' warning when
    signature being verified is missing a d= tag; accept a selector name
    of '0' rather than treating it as if the s= tag was missing
